# V2I-Hub

src/v2i-hub/LocationPlugin/: CMakeLists.txt
